# BarcodeDetection

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md
sample/: README.md  sobel-pooling_barcode.html  sobel-pooling_barcode.ipynb
src/: Python_IOU.py  detector.cu  detector.hpp  main.cu  main.hpp
src/detectors/: cpu_baseline.cpp  cpu_baseline.hpp  cpu_multithread.cpp  cpu_multithread.hpp  detectorInterface.cpp  detectorInterface.hpp  gpu_baseline.cu  gpu_baseline.hpp  gpu_functions.cu  gpu_functions.cuh  utils.cpp  utils.hpp
src/gpu_file/: image  image.cu  image.hh  main_gpu.cu  test_load_img.cu
